fix: z-index

--- a/src/page/blog/blog.scss
+++ b/src/page/blog/blog.scss
@@ -76,7 +76,7 @@
     bottom: 24px;
     width: 46px;
     height: 46px;
-    z-index: 9999;
+    z-index: 100;
     border-radius: 50%;
     background-color: $color_main;
     font-size: 12px;
